--- a/help/en_US/scilab_en_US_help/index.html
+++ b/help/en_US/scilab_en_US_help/index.html
@@ -31,7 +31,7 @@
     <h3 class="book-title">FOSSEE Image Processing Toolbox</h3>
 <ul class="list-part"><a name="fossee_image_processing_toolbox_manual"></a><div class="info"></div>
 
-<li><a href="section_a2c9cca36f8f25d9e603fc42b80e6232.html" class="part">FOSSEE Image Processing Toolbox</a>
+<li><a href="section_38a53415444fbf6feb416c6cf0aef456.html" class="part">FOSSEE Image Processing Toolbox</a>
 <ul class="list-chapter"><li><a href="align.html" class="refentry">align</a> &#8212; <span class="refentry-description">This function aligns the set of input images for HDR image creation.</span></li>
 
 
@@ -146,7 +146,7 @@
 
 
 
-<li><a href="pcwrite.html" class="refentry">pcwrite</a> &#8212; <span class="refentry-description">This function is used to write 3-D point cloud to PLY or PCD file.</span></li>
+<li><a href="pcwrite.html" class="refentry">pcwrite</a> &#8212; <span class="refentry-description">Write 3-D point cloud to PLY or PCD file.</span></li>
 
 
 
